# nao-accuracy-challenge

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  package.xml
launch/: nao_service_modules.launch
msg/: Target.msg  Target_list.msg
scripts/: control_service.py  main_engine.py  nao_extract_target.py  nao_leds.py  nao_speech.py  nao_tactile.py  parameters.py  shooting_service.py  vision_service.py
srv/: CheckHeadTouchResponse.srv  Control.srv  ShootBow.srv  SpeakWords.srv  Vision.srv
